--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -207,6 +207,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\functor.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\gameimages.cpp" />
+    <ClCompile Include="src\gameutils.cpp" />
     <ClCompile Include="src\globaldata.cpp" />
     <ClCompile Include="src\groundcat.cpp" />
     <ClCompile Include="src\hooks.cpp" />
@@ -416,6 +417,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\gameimages.h" />
     <ClInclude Include="include\gamesettings.h" />
+    <ClInclude Include="include\gameutils.h" />
     <ClInclude Include="include\globaldata.h" />
     <ClInclude Include="include\globalvariables.h" />
     <ClInclude Include="include\groundcat.h" />
