--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -242,6 +242,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midmsgboxbuttonhandlerstd.cpp" />
     <ClCompile Include="src\midmusic.cpp" />
     <ClCompile Include="src\midscenvariables.cpp" />
+    <ClCompile Include="src\midstack.cpp" />
     <ClCompile Include="src\midunitgroup.cpp" />
     <ClCompile Include="src\midunit.cpp" />
     <ClCompile Include="src\modifierutils.cpp" />
