--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -597,6 +597,9 @@
     <ClCompile Include="src\gameutils.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\midstack.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\ordercat.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
