Add CAttackModified vftable api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -143,6 +143,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\attack.cpp" />
     <ClCompile Include="src\attackclasscat.cpp" />
     <ClCompile Include="src\attackimpl.cpp" />
+    <ClCompile Include="src\attackmodified.cpp" />
     <ClCompile Include="src\attackreachcat.cpp" />
     <ClCompile Include="src\attacksourcecat.cpp" />
     <ClCompile Include="src\attacksourcelist.cpp" />
