--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -296,6 +296,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\tilevariation.cpp" />
     <ClCompile Include="src\togglebutton.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
+    <ClCompile Include="src\uimanager.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
     <ClCompile Include="src\unitinfolist.cpp" />
@@ -622,6 +623,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\togglebutton.h" />
     <ClInclude Include="include\tooltip.h" />
     <ClInclude Include="include\transformselfhooks.h" />
+    <ClInclude Include="include\uimanager.h" />
     <ClInclude Include="include\umattack.h" />
     <ClInclude Include="include\ummodifier.h" />
     <ClInclude Include="include\umstack.h" />
