--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -251,6 +251,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midmusic.cpp" />
     <ClCompile Include="src\midscenvariables.cpp" />
     <ClCompile Include="src\midstack.cpp" />
+    <ClCompile Include="src\midunitdescriptor.cpp" />
     <ClCompile Include="src\midunitgroup.cpp" />
     <ClCompile Include="src\midunit.cpp" />
     <ClCompile Include="src\modifierutils.cpp" />
@@ -546,6 +547,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midstacktemplate.h" />
     <ClInclude Include="include\midsubrace.h" />
     <ClInclude Include="include\midunit.h" />
+    <ClInclude Include="include\midunitdescriptor.h" />
     <ClInclude Include="include\midunitgroup.h" />
     <ClInclude Include="include\midvillage.h" />
     <ClInclude Include="include\modifgroup.h" />
