--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -300,6 +300,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\togglebutton.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
     <ClCompile Include="src\uimanager.cpp" />
+    <ClCompile Include="src\umattack.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
     <ClCompile Include="src\unitinfolist.cpp" />
