--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -645,6 +645,9 @@
     <ClCompile Include="src\attackmodified.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\ussoldierimpl.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\umattack.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
