--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -445,6 +445,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\functordispatch1.h" />
     <ClInclude Include="include\functordispatch2.h" />
+    <ClInclude Include="include\functordispatch3.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\gameimages.h" />
     <ClInclude Include="include\gamesettings.h" />
