--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -306,6 +306,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
     <ClCompile Include="src\unitinfolist.cpp" />
+    <ClCompile Include="src\unitpickerinterf.cpp" />
     <ClCompile Include="src\unitpositionlinkedlist.cpp" />
     <ClCompile Include="src\unitpositionlist.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
@@ -647,6 +648,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\unitgenerator.h" />
     <ClInclude Include="include\unitinfolist.h" />
     <ClInclude Include="include\unitmodifier.h" />
+    <ClInclude Include="include\unitpickerinterf.h" />
     <ClInclude Include="include\unitpositionlinkedlist.h" />
     <ClInclude Include="include\unitpositionlist.h" />
     <ClInclude Include="include\unitpositionpair.h" />
