--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -527,6 +527,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\middatacache.h" />
     <ClInclude Include="include\middragdropinterf.h" />
     <ClInclude Include="include\middropmanager.h" />
+    <ClInclude Include="include\midevcondition.h" />
     <ClInclude Include="include\midevent.h" />
     <ClInclude Include="include\midgard.h" />
     <ClInclude Include="include\midgardid.h" />
