--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1711,6 +1711,9 @@
     <ClInclude Include="include\midevent.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\midevcondition.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\eventconditionat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
