Add event effects

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -441,6 +441,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\eventconditioncat.h" />
     <ClInclude Include="include\eventconditions.h" />
     <ClInclude Include="include\eventeffectcat.h" />
+    <ClInclude Include="include\eventeffects.h" />
     <ClInclude Include="include\exchangeinterf.h" />
     <ClInclude Include="include\factoryimageanim.h" />
     <ClInclude Include="include\fortcategory.h" />
