Define event condition categories

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -205,6 +205,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\editor.cpp" />
     <ClCompile Include="src\enclayoutspell.cpp" />
+    <ClCompile Include="src\eventconditioncat.cpp" />
     <ClCompile Include="src\exchangeinterf.cpp" />
     <ClCompile Include="src\fortcategory.cpp" />
     <ClCompile Include="src\functor.cpp" />
