--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -409,6 +409,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\cmdbattlestartmsg.h" />
     <ClInclude Include="include\commandmsg.h" />
     <ClInclude Include="include\commandmsghooks.h" />
+    <ClInclude Include="include\condinterfhandler.h" />
     <ClInclude Include="include\currency.h" />
     <ClInclude Include="include\customattack.h" />
     <ClInclude Include="include\customattackhooks.h" />
