--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -681,6 +681,9 @@
     <ClCompile Include="src\editboxinterf.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\midevent.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\testcondition.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
