--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -207,6 +207,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\editboxinterf.cpp" />
     <ClCompile Include="src\editor.cpp" />
+    <ClCompile Include="src\effectinterf.cpp" />
     <ClCompile Include="src\enclayoutspell.cpp" />
     <ClCompile Include="src\eventconditioncat.cpp" />
     <ClCompile Include="src\eventconditioncathooks.cpp" />
@@ -450,6 +451,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\dynupgrade.h" />
     <ClInclude Include="include\editboxinterf.h" />
     <ClInclude Include="include\editor.h" />
+    <ClInclude Include="include\effectinterf.h" />
     <ClInclude Include="include\enclayoutspell.h" />
     <ClInclude Include="include\encparam.h" />
     <ClInclude Include="include\encparambase.h" />
