--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -452,6 +452,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\editboxinterf.h" />
     <ClInclude Include="include\editor.h" />
     <ClInclude Include="include\effectinterf.h" />
+    <ClInclude Include="include\effectinterfhandler.h" />
     <ClInclude Include="include\enclayoutspell.h" />
     <ClInclude Include="include\encparam.h" />
     <ClInclude Include="include\encparambase.h" />
